gccida/g0/print_operand_address
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand_address/src/i386.c:6601:10: error: use of undeclared identifier 'unk_77C2A0'
fwrite( &unk_77C2A0, 1uLL, 3uLL, a1); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand_address/src/i386.c:6642:14: error: use of undeclared identifier 'off_77C2AB'
fprintf( a1, off_77C2AB, ( unsigned int)scale); 
             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand_address/src/obj/i386.o] Error 1
